# live_data_architecture

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: AGENTS.md  Dockerfile  alembic.ini  pyproject.toml
backend/.agents/: AGENTS.md
backend/.agents/rule/archtecture_rule/: 00-path-conventions.md  01-boundaries-and-layout.md  02-shared-runtime-bootstrap.md  03-testing-and-quality-gates.md  05-type-and-schema-rules.md  06-adoption-plan.md  07-di-and-wiring-rule.md  08-exception-and-error-handling-rule.md  09-implementation-boundary-rule.md
backend/.agents/rule/test_rule/: 00-source-of-truth.md  01-location-and-discovery.md  02-philosophy-and-style.md  03-tdd-and-quality-gates.md  04-red-flags-and-reporting.md
backend/alembic/: env.py
backend/alembic/versions/: 20260424_0001_create_events_table.py  20260425_0002_create_event_analytics_views.py  20260425_0003_create_analytics_reader_grants.py  20260425_0004_create_analytics_view_tables.py
backend/app/: container.py  main.py
backend/app/event_analytics/: constants.py  containers.py
backend/app/event_analytics/application/: analytics_catalog.py  analytics_catalog_service.py  analytics_connection.py  chart_suggestion.py  explore_query_service.py  ingest_events_usecase.py  query_policy.py  sql_query_service.py  view_table_service.py
backend/app/event_analytics/domain/: analytics_catalog.py  analytics_connection.py  events.py  explore_query.py  query_result.py
backend/app/event_analytics/domain/repositories/: __init__.py  analytics_dataset_repository.py  analytics_query_repository.py  event_repository.py
backend/app/event_analytics/infrastructure/: analytics_connection_probe.py  database_url.py
backend/app/event_analytics/infrastructure/repositories/: postgres_analytics_query_repository.py  (+1 more)
backend/app/event_analytics/interface/: analytics_schemas.py  consumer_lifespan.py  schemas.py
backend/app/platform/: __init__.py  health_router.py
backend/app/platform/config/: __init__.py  app_config.py  common.py  database_config.py  stream_config.py
backend/app/platform/lifecycle/: __init__.py  state.py
backend/app/platform/logging/: __init__.py
backend/app/platform/middleware/: __init__.py  request_logging.py
backend/app/platform/schemas/: __init__.py  health_schema.py  logging_schema.py
backend/app/shared/exceptions/: __init__.py  event_analytics_exceptions.py  exception_decorators.py
backend/app/shared/guardrails/: __init__.py  _common.py  check_broad_types.py  check_getattr_usage.py  check_lazy_import_usage.py
backend/app/shared/serialization/: __init__.py  orjson_codec.py
backend/app/shared/types/: __init__.py  extra_types.py
backend/tests/: conftest.py  test_docs_visibility.py  test_logging_json.py  test_otel_mapping.py  test_platform_config.py  test_request_logging_headers.py  test_smoke.py
backend/tests/event_analytics/: test_alembic_analytics_reader_grants_migration.py  test_alembic_migration.py  test_alembic_view_tables_migration.py  test_alembic_views_migration.py  test_analytics_catalog.py  test_analytics_connection.py  test_analytics_connection_probe.py  test_analytics_router.py  test_chart_suggestion.py  test_event_stream_ingestion_loop.py  test_explore_query_service.py  test_ingest_events_usecase.py  test_postgres_analytics_query_repository.py  test_postgres_event_repository.py  test_query_policy.py  test_redis_stream_consumer.py  test_view_table_service.py  test_web_event_validation.py
backend/tests/shared/health/: test_health_routes.py
backend/tests/shared/lifecycle/: test_lifecycle_state.py
backend/tests/shared/middleware/: test_request_logging_lifecycle.py
frontend/: Dockerfile  (+3 more)
(+110 files in other folders)
